<resources>
    <string name="app_name">RentalWheels</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="digits">0712345678</string>
    <string name="mobilen">Enter your mobile number to get started</string>
    <string name="next">NEXT</string>
    <string name="nos">X_X_X_X_X_X</string>
    <string name="data">Kindly enter the following details to continue</string>
    <string name="name">Last Name</string>
    <string name="cb">Creed Bratton</string>
    <string name="mn">Confirm Your Mobile Number</string>
    <string name="mail">Enter your email address</string>
    <string name="cbe">Creedbratton@mifflin.com</string>

    <!--    //maps-->
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="very_weak">Very weak</string>
    <string name="weak">Weak</string>
    <string name="moderate">Moderate</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="unknown_strength"> </string>
</resources>