<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:id="@+id/progressbar"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="256dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="150dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="23dp"
                android:layout_marginEnd="23.2dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/semibold"
                    android:textColor = "?android:textColorPrimary"
                    android:letterSpacing="0.0325"
                    android:text="@string/data"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/semibold"
                    android:letterSpacing="0.0325"
                    android:textColor = "?android:textColorPrimary"
                    android:text="@string/name"
                    android:textSize="18.7sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_name"
                    android:layout_marginBottom="13.5dp"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/regular"
                    android:letterSpacing="0.0325"
                    android:hint="@string/cb"
                    android:textColor = "?android:textColorPrimary"
                    android:textSize="18.3sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.5dp"
                    android:fontFamily="@font/semibold"
                    android:letterSpacing="0.0325"
                    android:textColor = "?android:textColorPrimary"
                    android:text="@string/mn"
                    android:textSize="18.7sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13.5dp"
                    android:layout_marginTop="7dp"
                    android:inputType="phone"
                    android:id="@+id/user_mobile"
                    android:fontFamily="@font/regular"
                    android:letterSpacing="0.0325"
                    android:hint="@string/digits"
                    android:textColor = "?android:textColorPrimary"
                    android:background="@android:color/transparent"
                    android:textSize="18.3sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.5dp"
                    android:fontFamily="@font/semibold"
                    android:letterSpacing="0.0325"
                    android:textColor = "?android:textColorPrimary"
                    android:text="@string/mail"
                    android:textSize="18.7sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13.5dp"
                    android:layout_marginTop="7dp"
                    android:id="@+id/user_email"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/regular"
                    android:letterSpacing="0.0325"
                    android:textColor = "?android:textColorPrimary"
                    android:hint="@string/cbe"
                    android:textSize="18.3sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"/>

                <TextView
                    android:textSize="15sp"
                    android:id="@+id/tv_updateuserdetail"
                    android:background="@drawable/circularbluebordersolid"
                    android:textAllCaps="true"
                    android:paddingTop="16.3dp"
                    android:paddingBottom="16.3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:textColor = "?android:textColorPrimary"
                    android:text="@string/next"
                    android:fontFamily="@font/semibold"
                    android:textAlignment="center"/>



            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
